# flask_api_and_swagger

./: README.md  pyproject.toml  run_api.py
api/: routes.py
api/static/: swagger.json
